added param to subscriptions endpoint, pass new param along to required methods
